--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
-html{
-    box-sizing: border-box;
-    margin: 0 auto;
-}
-*,*:after, *:before{
-    box-sizing: inherit;
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Roboto&display=swap');
+body{
+    margin: 0;
+    padding: 0;
 }
 .maket{
+    padding: 15px;
     width: 1440px;
+    border: 1px  solid greenyellow ;
 }
 .header1{
     width: 1440px;
@@ -30,10 +31,10 @@ ul{
     justify-content: center;
     align-items: center;
     gap: 40px;
-    margin-left: 566px;
+    margin-left: 500px;
     margin-top: 50px;
     margin-bottom: 40px;
-    Font-family: Cormorant Garamond
+    Font-family: Cormorant Garamond;
     Font-size:24px;
     Line-height: 30px;
     color: #B08EAD;
@@ -41,8 +42,96 @@ ul{
 .korzinka{
     width: 22px;
     height: 20px;
-    margin-right: 170px;
+    margin-right: 160px;
     margin-top: 13px;
+}
+.block-0{
+    position: relative;
+    width: 1440px;
+    height: 817px;
+}
+.bc-1{
+ background-image: url("./image/bc-1.png") ;
 
+    margin: 0 auto;
+}
+.bc-2{
+    margin-top: -6px;
+}
+.frontphoto-1{
+    position: absolute;
+    width: 851px;
+    height: 675px;
+    margin-top: -731px;
+    margin-left: 178px;
+}
+/*.frontphoto-2{
+    position: absolute;
+    width: 425px;
+    height: 450px;
+    margin-top: -616px;
+    margin-left: 903px;
+}*/
+.text-0{
+    position: absolute;
+    margin-top: -602px;
+    margin-left: 895px;
+    width: 425px;
+    height: 450px;
+    background-color: #B08EAD;
+    color: #FFFFFF;
+    padding-left: 40px;
+}
+.new{
+    Font-family: Roboto;
+    Font-style: Regular;
+    Font-size: 14px;
+    Line-height: 30px;
+    width: 35px;
+    height: 30px;
+    margin-top: 124px;
+}
+.spring{
+    width: 280px;
+    height: 55px;
+    Font-family: Cormorant Garamond;
+    Font-style: Regular;
+    Font-size: 45px;
+    Line-height: 55px;
+    margin-top: 16px;
+}
+.collection{
+    width: 274px;
+    height: 55px;
+    Font-family: Cormorant Garamond;
+    Font-style: Regular;
+    Font-size: 45px;
+    Line-height: 55px;
+    margin-top: -51px;
+}
+.buynow{
+    margin-top: 20px;
+    color: #FFFFFF;
+    Font-family: Roboto;
+    Font-style: Regular;
+    Font-size: 14px;
+    Line-height: 30px;
+    width: 73px;
+    height: 30px;
+    text-decoration: none;
 
 }
+.btn{
+    position: absolute;
+    width: 70px;
+    height: 0.5em;
+    margin-left: -62px;
+
+    margin-top:31px;
+
+}
+
+
+
+
+
