--- a/style.css
+++ b/style.css
@@ -117,8 +117,43 @@ ul{
     width: 66px;
     height: 0.5em;
     margin-left: -62px;
-
     margin-top:31px;
+}
+.text1{
+    text-align: -webkit-center;
+}
+.cushion{
+    margin-top: 75px;
+    width: 197px;
+    height: 30px;
+    Font-family: Roboto;
+    Font-style: Regular;
+    Font-size: 14px;
+    Line-height: 30px;
+    color: #B99BB6;
+}
+.text-p{
+    margin-top: 13px;
+    width: 747px;
+    height: 76px;
+    Font-family: Cormorant Garamond;
+    Font-size: 26px;
+    Line-height: 38px;
+    color: #5F4D5D;
+}
+.learn{
+    border: 1px solid #B99BB6;
+    border-radius: 25px;
+    padding: 10px;
+    width: 141px;
+    height: 45px;
+    Font-family: Roboto;
+    Font-style: Regular;
+    Font-size: 11px;
+    Line-height: 15px;
+    background-color: #FFFFFF;
+    color: #B99BB6;
+    margin-top: 17px;
 
 }
 
