--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Roboto&display=swap');
 body{
     margin: 20px;
     padding: 0;
@@ -156,7 +157,89 @@ ul{
     margin-top: 17px;
 
 }
-
+.block-1{
+    display: flex;
+    margin-top: 50px;
+    margin-left: 131px;
+    gap: 37px;
+}
+.text2{
+    margin-left: 131px;
+    width: 343px;
+    height: 113px;
+    border: 1px solid #CEB3CB;
+    background-color:#CEB3CB ;
+    color: #FFFFFF;
+    padding-left: 23px;
+    padding-top: 23px;
+    Font-family: Cormorant Garamond;
+    Font-size: 25px;
+    Line-height: 30px;
+}
+.about1{
+    margin-top: 10px;
+}
+.learn1{
+    width: 79px;
+    height: 30px;
+    text-decoration: none;
+    color: #FFFFFF;
+    Font-family: Cormorant Garamond;
+    Font-size: 17px;
+    Line-height: 30px;
+}
+.text3{
+    margin-left: 536px;
+    margin-top: -139px;
+    width: 343px;
+    height: 113px;
+    border: 1px solid #CEB3CB;
+    background-color:#CEB3CB ;
+    color: #FFFFFF;
+    padding-left: 23px;
+    padding-top: 23px;
+    Font-family: Cormorant Garamond;
+    Font-size: 25px;
+    Line-height: 30px;
+}
+.myproducts{
+    margin-top: 10px;
+}
+.learn2{
+    width: 79px;
+    height: 30px;
+    text-decoration: none;
+    color: #FFFFFF;
+    Font-family: Cormorant Garamond;
+    Font-size: 17px;
+    Line-height: 30px;
+}
+.text4{
+    margin-left: 941px;
+    margin-top: -139px;
+    width: 343px;
+    height: 113px;
+    border: 1px solid #CEB3CB;
+    background-color:#CEB3CB ;
+    color: #FFFFFF;
+    padding-left: 23px;
+    padding-top: 23px;
+    Font-family: Cormorant Garamond;
+    Font-size: 25px;
+    Line-height: 30px;
+}
+.contactme1{
+    margin-top: 10px;
+}
+.learn3{
+    width: 79px;
+    height: 30px;
+    text-decoration: none;
+    color: #FFFFFF;
+    Font-family: Cormorant Garamond;
+    Font-size: 17px;
+    Line-height: 30px;
+}
 
 
 
